# struson

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile.toml  README.md  ReleaseProcess.md  SECURITY.md  rust-toolchain.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_issue.md  enhancement_suggestion.md
.github/workflows/: build.yml  publish.yml
benches/: reader_benchmark.rs  reader_struct_benchmark.rs  serde_deserialize_benchmark.rs  serde_serialize_benchmark.rs  writer_benchmark.rs  writer_struct_benchmark.rs
src/: json_number.rs  lib.rs  reader.rs  utf8.rs  writer.rs
src/reader/: mod.rs  simple.rs  stream_reader.rs
src/serde/: de.rs  mod.rs  ser.rs
src/writer/: async_stream_writer.rs  mod.rs  simple.rs  stream_writer.rs
tests/: custom_json_reader.rs  custom_json_writer.rs  partial_reader.rs  reader_alloc_test.rs  reader_test.rs  serde_deserialize_test.rs  serde_serialize_test.rs  simple_reader.rs  simple_writer.rs  test_data.json  transfer_test.rs  writer_alloc_test.rs  writer_pretty_printer_test.rs  writer_test.rs
tests/test_lib/: mod.rs  test_data.json
