[package]
name = "struson"
version = "0.1.0"
authors = ["Marcono1234"]
edition = "2021"
description = "A low-level streaming JSON reader and writer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Marcono1234/struson"
keywords = ["json", "streaming", "parser"]
categories = ["parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
strum = "0.25.0"
strum_macros = "0.24.3"
duplicate = "1.0.0"

serde = { version = "1.0.159", optional = true }

[dev-dependencies]
criterion = {version = "0.5.1", features = ["html_reports"] }
# Serde is used for comparison in benchmarks and for tests
serde = "1.0.159"
serde_json = "1.0.95"

# docs.rs specific configuration
[package.metadata.docs.rs]
# Document all features
all-features = true
# Set configuration flag to enable docs.rs specific doc attributes, such as `doc_auto_cfg`
# See https://stackoverflow.com/q/61417452
rustdoc-args = ["--cfg", "docsrs"]


# For all these benchmarks disable default harness (`harness = false`) because Criterion creates its own

[[bench]]
name = "reader_benchmark"
harness = false

[[bench]]
name = "reader_struct_benchmark"
harness = false

[[bench]]
name = "writer_benchmark"
harness = false

[[bench]]
name = "writer_struct_benchmark"
harness = false

[[bench]]
name = "serde_serialize_benchmark"
harness = false
required-features = ["serde"]

[[bench]]
name = "serde_deserialize_benchmark"
harness = false
required-features = ["serde"]
