[package]
name = "struson"
version = "0.3.0"
authors = ["Marcono1234"]
edition = "2021"
description = "A low-level streaming JSON reader and writer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Marcono1234/struson"
keywords = ["json", "streaming", "parser"]
categories = ["parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.49"
strum = { version = "0.25.0", features = ["derive"] }
duplicate = "1.0.0"

serde = { version = "1.0.189", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
# Serde is used for comparison in benchmarks and for tests
serde = "1.0.189"
# When updating serde_json, adjust Struson Serde integration behavior to match serde_json
serde_json = "1.0.107"
# Used for verifying in allocation tests that no allocations occur in certain situations
# Specify Git revision because version with "backtrace" feature has not been released yet
assert_no_alloc = { git = "https://github.com/Windfisch/rust-assert-no-alloc.git", rev = "d31f2d5f550ce339d1c2f0c1ab7da951224b20df", features = [
    "backtrace",
] }

# docs.rs specific configuration
[package.metadata.docs.rs]
# Document all features
all-features = true
# Set configuration flag to enable docs.rs specific doc attributes, such as `doc_auto_cfg`
# See https://stackoverflow.com/q/61417452
rustdoc-args = ["--cfg", "docsrs"]

# Cargo Profile for manual performance profiling
[profile.release-debug]
inherits = "release"
debug = true


# For all these benchmarks disable default harness (`harness = false`) because Criterion creates its own

[[bench]]
name = "reader_benchmark"
harness = false

[[bench]]
name = "reader_struct_benchmark"
harness = false

[[bench]]
name = "writer_benchmark"
harness = false

[[bench]]
name = "writer_struct_benchmark"
harness = false

[[bench]]
name = "serde_serialize_benchmark"
harness = false
required-features = ["serde"]

[[bench]]
name = "serde_deserialize_benchmark"
harness = false
required-features = ["serde"]
